test/src/e2e_vm_tests/test_programs/should_fail/repeated_storage_field/src/main.sw
contract;

storage {
    x: u64,
    x: b256,
    x: str[4],
}

abi Test {
    fn foo();
}

impl Test for Contract {
    fn foo() {
    }
}
